--- a/_posts/2026-01-16-welcome.md
+++ b/_posts/2026-01-16-welcome.md
@@ -1,15 +1,7 @@
 ---
 layout: post
-title: "Welcome to My Blog"
+title: "Person with ADHD tries to write"
 date: 2026-01-16
 ---
 
-This is my first blog post using Jekyll on GitHub Pages.
-
-## Getting Started
-
-Jekyll makes it easy to write blog posts in Markdown. Just create a new file in the `_posts` directory with the format `YYYY-MM-DD-title.md`.
-
-## What's Next
-
-Stay tuned for more posts!
+To get better one must do. This is me trying to get better about writting.
